# wolf

./: README.md  pyproject.toml
tests/: test_wolf_cli.py
wolf_cli/: cli.py
wolf_cli/commands/: images.py  trading.py  urls.py
